Decks rc3 (+ responsividad y cambios estéticos)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="media/img/logo.png" alt="">
+        <a href="index.html"><img src="media/img/logo.png" alt=""></a>
         <div>
             <div id="hamburguer">
                 <button id="btnMenu">
@@ -59,10 +59,54 @@
             </ul>
         </aside>
         <section>
-            <article class="deck"><a href="subpages/atraxa.html"><div></div><p><b>Atraxa contadores</b></p></a></article>
-            <article class="deck"><a href="subpages/oloro.html"><div></div><p><b>Oloro Stax</b></p></a></article>
-            <article class="deck"><a href="subpages/brago.html"><div></div><p><b>Brago Control</b></p></a></article>
-            <article class="deck"><a href="subpages/ur-dragon.html"><div></div><p><b>Ur dragon Pinos</b></p></a></article>
+            <article class="deck">
+                <a href="subpages/atraxa.html">
+                    <div>
+                        <b>Atraxa contadores</b>
+                        <div class="circulo azul" title="Este mazo tiene identidad azul"></div>
+                        <div class="circulo blanco" title="Este mazo tiene identidad blanca"></div>
+                        <div class="circulo negro" title="Este mazo tiene identidad negra"></div>
+                        <div class="circulo disabled"></div>
+                        <div class="circulo verde" title="Este mazo tiene identidad verde"></div>
+                    </div>
+                </a>
+            </article>
+            <article class="deck">
+                <a href="subpages/oloro.html">
+                    <div>
+                        <b>Oloro Stax</b>
+                        <div class="circulo azul" title="Este mazo tiene identidad azul"></div>
+                        <div class="circulo blanco" title="Este mazo tiene identidad blanca"></div>
+                        <div class="circulo negro" title="Este mazo tiene identidad negra"></div>
+                        <div class="circulo disabled"></div>
+                        <div class="circulo disabled"></div>
+                    </div>
+                </a>
+            </article>
+            <article class="deck">
+                <a href="subpages/brago.html">
+                    <div>
+                        <b>Brago Control</b>
+                        <div class="circulo azul" title="Este mazo tiene identidad azul"></div>
+                        <div class="circulo blanco" title="Este mazo tiene identidad blanca"></div>
+                        <div class="circulo disabled"></div>
+                        <div class="circulo disabled"></div>
+                        <div class="circulo disabled"></div>
+                    </div>
+                </a>
+            </article>
+            <article class="deck">
+                <a href="subpages/ur-dragon.html">
+                    <div>
+                        <b>Ur dragon Pinos</b>
+                        <div class="circulo azul" title="Este mazo tiene identidad azul"></div>
+                        <div class="circulo blanco" title="Este mazo tiene identidad blanca"></div>
+                        <div class="circulo negro" title="Este mazo tiene identidad negra"></div>
+                        <div class="circulo rojo" title="Este mazo tiene identidad roja"></div>
+                        <div class="circulo verde" title="Este mazo tiene identidad verde"></div>
+                    </div>
+                </a>
+            </article>
         </section>
     </main>
 </body>
