--- a/subpages/brago.html
+++ b/subpages/brago.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="../media/img/logo.png" alt="">
+        <a href="../index.html"><img src="../media/img/logo.png" alt=""></a>
         <div>
             <div id="hamburguer">
                 <button id="btnMenu">
