Decks más grandes y mejor colocados en pantallas antiguas

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </ul>
         </aside>
         <section>
-            <article class="deck">
+            <article class="deck mt-1">
                 <a href="subpages/atraxa.html">
                     <div>
                         <b>Atraxa contadores</b>
@@ -71,7 +71,7 @@
                     </div>
                 </a>
             </article>
-            <article class="deck">
+            <article class="deck mt-1">
                 <a href="subpages/oloro.html">
                     <div>
                         <b>Oloro Stax</b>
@@ -83,7 +83,7 @@
                     </div>
                 </a>
             </article>
-            <article class="deck">
+            <article class="deck mt-1">
                 <a href="subpages/brago.html">
                     <div>
                         <b>Brago Control</b>
@@ -95,7 +95,7 @@
                     </div>
                 </a>
             </article>
-            <article class="deck">
+            <article class="deck mt-1">
                 <a href="subpages/ur-dragon.html">
                     <div>
                         <b>Ur dragon Pinos</b>
