Decks rc5 (cambios en listado cartas)

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
                 </button>
             </div>
             <ul>
-                <a href="#" class="active">
+                <a href="index.html" class="active">
                     <li>
                         <h3>Mazos</h3>
                     </li>
                 </a>
-                <a href="#">
+                <a href="subpages/coleccion.html">
                     <li>
                         <h3>Colección</h3>
                     </li>
                 </a>
-                <a href="#">
+                <a href="subpages/comandantes.html">
                     <li>
                         <h3>Comandantes</h3>
                     </li>
@@ -46,19 +46,19 @@
                         <h3>Mazos</h3>
                     </li>
                 </a>
-                <a href="#">
+                <a href="subpages/coleccion.html">
                     <li>
                         <h3>Colección</h3>
                     </li>
                 </a>
-                <a href="#">
+                <a href="subpages/comandantes.html">
                     <li>
                         <h3>Comandantes</h3>
                     </li>
                 </a>
             </ul>
         </aside>
-        <section>
+        <section class="indexSection">
             <article class="deck mt-1">
                 <a href="subpages/atraxa.html">
                     <div>
