--- a/subpages/atraxa.html
+++ b/subpages/atraxa.html
@@ -25,12 +25,12 @@
                         <h3>Mazos</h3>
                     </li>
                 </a>
-                <a href="#">
+                <a href="coleccion.html">
                     <li>
                         <h3>Colección</h3>
                     </li>
                 </a>
-                <a href="#">
+                <a href="comandantes.html">
                     <li>
                         <h3>Comandantes</h3>
                     </li>
@@ -46,12 +46,12 @@
                         <h3>Mazos</h3>
                     </li>
                 </a>
-                <a href="#">
+                <a href="coleccion.html">
                     <li>
                         <h3>Colección</h3>
                     </li>
                 </a>
-                <a href="#">
+                <a href="comandantes.html">
                     <li>
                         <h3>Comandantes</h3>
                     </li>
