Comienzo subpagina comandantes

--- a/subpages/coleccion.html
+++ b/subpages/coleccion.html
@@ -25,7 +25,7 @@
                         <h3>Mazos</h3>
                     </li>
                 </a>
-                <a href="coleccion.html">
+                <a href="coleccion.html" class="active">
                     <li>
                         <h3>Colección</h3>
                     </li>
