--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header>
+        <a href="subpages/help.html" id="help"><b>¿Que es una carta magic?</b></a>
         <a href="index.html"><img src="media/img/logo.png" alt=""></a>
         <div>
             <div id="hamburguer">
