--- a/subpages/comandantes.html
+++ b/subpages/comandantes.html
@@ -41,17 +41,17 @@
     <main>
         <aside id="menu">
             <ul>
-                <a href="index.html" class="active">
+                <a href="../index.html">
                     <li>
                         <h3>Mazos</h3>
                     </li>
                 </a>
-                <a href="subpages/coleccion.html">
+                <a href="coleccion.html">
                     <li>
                         <h3>Colección</h3>
                     </li>
                 </a>
-                <a href="subpages/comandantes.html">
+                <a href="comandantes.html" class="active">
                     <li>
                         <h3>Comandantes</h3>
                     </li>
