--- a/subpages/brago.html
+++ b/subpages/brago.html
@@ -41,7 +41,7 @@
     <main>
         <aside id="menu">
             <ul>
-                <a href="../index.html" class="active">
+                <a href="../index.html">
                     <li>
                         <h3>Mazos</h3>
                     </li>
