--- a/subpages/comandantes.html
+++ b/subpages/comandantes.html
@@ -70,6 +70,63 @@
                         <div class="circulo verde" title="Este mazo tiene identidad verde"></div>
                     </div>
                 </a>
+                <p class="text-black p-1 my-0">
+                    Atraxa fue antaño un valeroso ángel mirrodiano, pero tras su renacer como una pirexiana
+                    perfeccionada se
+                    convirtió en un símbolo de unidad para Nueva Pirexia. Atraxa es un ser orgulloso, radiante y devoto
+                    de
+                    la Ortodoxia de las Máquinas, que cumple sin dudar los designios de la Madre de las Máquinas como
+                    una de
+                    sus siervos más poderosos.
+                </p>
+                <p class="text-black p-1 my-0">
+                    Atraxa sirve como la general más leal de Elesh Norn, ponderando las futuras campañas para la
+                    adoctrinación del Multiverso. Con su elegancia y porte erguido, es la pirexiana ideal, un arma
+                    perfecta
+                    en la batalla, capaz de esparcir el aceite iridiscente por todos los planos. También es la creadora
+                    de
+                    su teniente, el ángel Ixhel, a quien trata como una hija.[1]
+                    Historia
+                </p>
+                <p class="text-black p-1 my-0">
+                    Atraxa luchó durante la invasión de Mirrodin, oponiéndose a la corrupción de Pirexia. Sin embargo,
+                    fue
+                    capturada cuando se encargaba de proteger a un grupo de supervivientes mirrodianos que se batía en
+                    retirada. Se dice que el nacimiento de Atraxa marcó el fin del conflicto y la victoria definitiva de
+                    Pirexia en la conquista de Mirrodin.
+                </p>
+                <p class="text-black p-1 my-0">
+                    La magistrada Elesh Norn honró el tesón que Atraxa había demostrado en la defensa de los mirrodianos
+                    con
+                    el divino regalo de la perfección pirexiana e invitó a otros magistrados a contribuir en el proceso.
+                    Siendo contrario a Norn, Úrabrask se negó, pero Jin-Gitaxias, Sheoldred y Vórinclex aceptaron unirse
+                    a
+                    la Gran Cenobita, y juntos crearon el imponente testimonio que es Atraxa del extraordinario
+                    propósito de
+                    Pirexia.
+                </p>
+                <p class="text-black p-1 my-0">
+                    Cuando Elesh Norn empezó a concentrar sus esfuerzos en la conquista del Multiverso, encomendó a
+                    Atraxa
+                    un deber sagrado. Atraxa tendría el honor de unificar bajo la causa de la Basílica Pálida al resto
+                    de
+                    esferas de Nueva Pirexia. Con este nuevo cometido en mente, la gran unificadora creó a su propia
+                    lugarteniente. Su vástago, Ixhel, con una forma semejante a la de su progenitora, fue enviada a
+                    someter
+                    a los otros magistrados. No obstante, tras encomendarle la misión de acabar con el barón Geth,
+                    Atraxa se
+                    sintió decepcionada al ver que Ixhel se había tomado la libertad de convertir la cabeza del liche
+                    móriok
+                    en un nuevo pirexiano llamado Vishgraz.[1]
+                </p>
+                <p class="text-black p-1 my-0">
+                    Durante la incursión al Núcleo de la Semilla llevado a cabo por los Guardianes, Atraxa dirigió un
+                    contingente de tropas voladoras para defender la esfera de la Basílica Pálida, que se vio invadida
+                    por
+                    los habitantes de los Fosos del Dros cuando la litomante Nahiri derrumbó el Coliseo de Sheoldred a
+                    la
+                    desesperada.
+                </p>
             </article>
             <article class="deck mt-1 ms-3">
                 <a href="oloro.html" class="float-right ms-1">
@@ -82,20 +139,25 @@
                         <div class="circulo disabled"></div>
                     </div>
                 </a>
-                <p class="p-1 my-0">
+                <p class="text-black p-1 my-0">
                     Oloro, el asceta inmortal es un soldado gigante legendario de un plano desconocido.
                 </p>
-                <p class="p-1 my-0">
-                    Oloro puede manipular la vida y la muerte. De hecho cree poseer el secreto de la vida eterna, 
+                <p class="text-black p-1 my-0">
+                    Oloro puede manipular la vida y la muerte. De hecho cree poseer el secreto de la vida eterna,
                     el cual guarda con recelo en su isla cubierta de niebla.
-                    La ubicación de Oloro es buscada por ladrones y místicos: algunos de ellos para robarle sus posesiones,
+                    La ubicación de Oloro es buscada por ladrones y místicos: algunos de ellos para robarle sus
+                    posesiones,
                     mientras que otros buscan conocer sus secretos.
                 </p>
-                <p class="p-1 my-0">
-                    Oloro tolera unicamente la compañia de unos pocos compeñeros selectos: aquellos quienes pueden ayudarle 
-                    en su búsqueda de conocimiento. Algunos dicen que es más viejo que el propio tiempo y más sabio que todas 
-                    las grandes mentes juntas de las ilustres academias del aprendizaje. Hasta ahora, Oloro se las ha arreglado 
-                    para mantenerse en un complejo equilibrio entre la luz y la oscuridad, pero cualquier amenaza contra sus 
+                <p class="text-black p-1 my-0">
+                    Oloro tolera unicamente la compañia de unos pocos compeñeros selectos: aquellos quienes pueden
+                    ayudarle
+                    en su búsqueda de conocimiento. Algunos dicen que es más viejo que el propio tiempo y más sabio que
+                    todas
+                    las grandes mentes juntas de las ilustres academias del aprendizaje. Hasta ahora, Oloro se las ha
+                    arreglado
+                    para mantenerse en un complejo equilibrio entre la luz y la oscuridad, pero cualquier amenaza contra
+                    sus
                     preciados secretos podría forzarle en una despiadada misión de dominación.
                 </p>
             </article>
@@ -110,6 +172,89 @@
                         <div class="circulo disabled"></div>
                     </div>
                 </a>
+                <p class="text-black p-1 my-0">
+                    El conde Brago en su juventud era una persona optimista y ambiciosa, cuya vista para desenvolverse
+                    por
+                    los entresijos de Paliano no tenía parangón.
+                </p>
+                <p class="text-black p-1 my-0">
+                    Padecía de una enfermedad hereditaria mortal de la que no se conoce cura. Tras recibir durante
+                    setenta
+                    años los tratamientos de los Custodi, su cuerpo adquirió un aspecto frágil. La piel se le volvió
+                    como
+                    pergamino y perdió totalmente su calidez. Los labios se le agrietaron y sus ojos se volvieron
+                    lechosos,
+                    a la par que su mente se debilitaba. Se volvió incapaz de morir naturalmente y, cuando finalmente
+                    murió,
+                    se desintegró en polvo.
+                </p>
+                <p class="text-black p-1 my-0">
+                    Como espíritu, Brago conservó sus rasgos maduros así como su largo pelo y barba canos. Los ropajes,
+                    armadura y corona que portaba en vida, se volvieron incorpóreos como él y adquirieron un brillo
+                    azulado.
+                    Ilógicamente, desarrolló una cierta paranoia por su seguridad personal, manteniendo siempre cerca a
+                    su
+                    capitana de la guardia, Adriana.
+                </p>
+                <h2 class="text-black p-1 my-0">Historia</h2>
+                <hr>
+                <h4 class="text-black p-1 my-0">Juventud</h4>
+                <p class="text-black p-1 my-0">
+                    Brago nació como el tercer hijo de una familia de la baja nobleza de Paliano, cuando la ciudad aún
+                    era
+                    joven. Desde temprana edad, Brago fue ascendiendo en la escala social de Fiora, adquiriendo el
+                    título de
+                    Conde. Conoció a Selvala y se volvieron inseparables al compartir la visión de una Paliano mejor. Él
+                    se
+                    convirtió en un terror para las cortes y las cámaras del concilio, con unos argumentos impecables y
+                    unos
+                    ruegos irresistibles. Con ayuda de Selvala, creó una coalición entre la nobleza, el clero y la clase
+                    mercantil, y eliminó la corrupción de Paliano, reemplazándola con humildad. Acabando siempre con más
+                    poder en sus manos, alcanzó el título de Rey.
+                </p>
+                <h4 class="text-black p-1 my-0">Rey y enfermedad</h4>
+                <p class="text-black p-1 my-0">
+                    Sólo tres años después de convertirse en monarca de la Alta Ciudad, Brago fue diagnosticado por los
+                    médicos que no viviría hasta terminar el año. Él y Selvala quedaron desolados, temiendo que las
+                    alianzas
+                    por las que tanto habían luchado se disolvieran con su prematura muerte. El sacerdocio le ofreció
+                    sus
+                    tratamientos, a los cuales finalmente accedió, no sin reticencia. Así, Brago vivió, mantenido y
+                    aconsejado por los recién formados Custodi.
+                </p>
+                <p class="text-black p-1 my-0">
+                    Según su cuerpo se deterioraba, los dolores que padecía aumentaban hasta que llegó un punto en que
+                    remitieron para no sentir nada prácticamente. En su decrepitud, el rey, antaño humilde y centrado en
+                    la
+                    ciudad, se volvió un tirano manipulado por sus consejeros Custodi. Para conservar su memoria y
+                    recuerdos, mantenía cenas esporádicas con su antigua amiga Selvala, quien detestaba tales
+                    encuentros.
+                    Setenta años después de su diagnostico, durante una de estas cenas, ambos estuvieron de acuerdo en
+                    que
+                    ella debía acabar con su sufrimiento, y con una puñalada en el corazón la vida mortal de Brago
+                    terminó.
+                </p>
+                <h4 class="text-black p-1 my-0">Rey Eterno</h4>
+
+                <p class="text-black p-1 my-0">
+                    Sin embargo, el tratamiento de los Custodi había ido demasiado lejos. Brago regresó en forma de
+                    espíritu
+                    y mantuvo su título de regente. Hizo que comunicaran la magnitud de tal evento; se había convertido
+                    en
+                    el soberano eterno de Paliano. Poco tiempo después, ayudado por la guardia de la ciudad acabó con la
+                    insurrección de los constructos del artífice Muzzio. Motivado por este acontecimiento, ordenó
+                    desmantelar la Academia y purgar de sus invenciones la ciudad. Su reinado comenzó entonces a
+                    tornarse
+                    cruel.
+                </p>
+                <p class="text-black p-1 my-0">
+                    Por desgracia no duró demasiado más en el poder, ya que una asesina fue enviada a acabar con él. La
+                    caminante de planos Kaya destruyó a Brago mientras los Custodi distraían a su guardia.[2][3] Lo
+                    único
+                    que quedó de Brago fueron sus ropas, espada y corona. La corona fue rápidamente usurpada por
+                    Marquesa,
+                    una pariente lejana, mientras que su espada la conservó Adriana, la capitana de la guardia.
+                </p>
             </article>
             <article class="deck mt-1 ms-3">
                 <a href="ur-dragon.html" class="float-right ms-1">
@@ -122,6 +267,46 @@
                         <div class="circulo verde" title="Este mazo tiene identidad verde"></div>
                     </div>
                 </a>
+                <p class="text-black p-1 my-0">
+                    El ur-dragón, Progenitor del fuego, es un enorme e inmensamente poderoso Avatar dragón. Es una
+                    entidad
+                    que existe desde los albores del tiempo, de cuya esencia primordial procede toda la raza dracónica
+                    en el
+                    Multiverso.
+                </p>
+                <h2 class="text-black p-1 my-0">Descripción</h2>
+                <hr>
+                <p class="text-black p-1 my-0">
+                    Con sus alas, que se extienden por las eternidades, es capaz de agitar el tejido del cosmos. Su
+                    aliento
+                    flota sobre los reinos mortales, robando la esencia de la vida. Sus garras se desplazan por el éter
+                    rasgando vínculos ancestrales. Gracias a sus ojos, aparentemente ciegos, el ur-dragón percibe las
+                    verdades más profundas que se ocultan en vórtices temporales. Su estruendoso rugido invoca a su
+                    progenie
+                    y fluye por la sangre de todos los dragones, ya que el ur-dragón es el progenitor de todos los del
+                    Multiverso.[5]
+                </p>
+                <p class="text-black p-1 my-0">
+                    El ur-dragón es descrito como una enorme, oscura y terrorífica sombra. Es un ente que reside en
+                    todas
+                    partes y en ninguna. A su paso por los planos, crea tormentas con el batir de sus alas de las que
+                    nacen
+                    los demás dragones. Entre sus "hijos" se incluyen los dragones ancianos gemelos, Nicol Bolas y Ugin,
+                    así
+                    como sus hermanos y primos.
+                </p>
+                <h2 class="text-black p-1 my-0">El Vástago del ur-dragón</h2>
+                <hr>
+                <p class="text-black p-1 my-0">
+                    Como se cuenta, el espíritu del ur-dragón está en el corazón de todos los de su especie,
+                    otorgándoles
+                    fuerza física, magia poderosa y una inteligencia sin igual. Entre los dragones, el Vástago del
+                    ur-dragón
+                    siente este vínculo instintivo de una forma más intensa que la mayoría, ya que se considera el
+                    descendiente directo de su todopoderoso ancestro.[6] Sin embargo, no está solo en este respecto. Los
+                    Dragones Primigenios de Dominaria, de hecho, representan cada uno una de las características del
+                    ur-dragón.
+                </p>
             </article>
         </section>
     </main>
